# physical-rng

./: Pipfile  README.md  pyproject.toml
physical_rng/: __init__.py  random_algorithms.py  random_save_as_bin.py  rbg_nist_sp_800_22_test.py  rng_algorithms.py  utils.py
physical_rng/console_scripts/: rng_toolbox.py
physical_rng/experiment/: experiment2_random.py  experiment_lfsr.py  experiment_subtraction.py
physical_rng/experiments/: experiment1_random.py  experiment2_random.py  experiment_subtraction.py
tests/: test_random_toolbox.py
